urlscan mode change from pub to private and template change to add screenshot in results

--- a/thehive-templates/Urlscan_io_Scan_0_1_0/long.html
+++ b/thehive-templates/Urlscan_io_Scan_0_1_0/long.html
@@ -20,6 +20,14 @@
             </dd>
         </dl>
         <dl class="dl-horizontal">
+            <dt>Screenshot</dt>
+            <dd class="wrap">
+                <a href="{{content.indicator.task.screenshotURL}}" target="_blank">
+                    <img src={{content.indicator.task.screenshotURL}} alt="{{content.indicator.task.screenshotURL}}" width="640" height="480" >
+                </a>
+            </dd>
+        </dl>
+        <dl class="dl-horizontal">
             <dt>Ip</dt>
             <dd class="wrap">{{content.indicator.page.ip}}</dd>
         </dl>
